--- a/estudios.css
+++ b/estudios.css
@@ -78,6 +78,9 @@
         padding-left: 10vw;
         display: inline-block;
     }
+    .links a:hover {
+        color: white;
+    }
 
     .piedepagina {
         text-align: center;
@@ -170,6 +173,10 @@
         display: flex;
     }
 
+    .links a:hover {
+        color: white;
+    }
+
     .piedepagina {
         text-align: center;
         font-family: lily script one;
@@ -180,6 +187,119 @@
         margin:auto;
     }
 }
+
+/*------------PANTALLAS MEDIANAS-----------*/
+@media screen and (max-width: 992px) and (min-width: 768px) {
+    body {
+        padding: 0px;
+        margin: 0px;
+        max-height: 992px;
+        background-color: #B8F9F5;
+    }
+
+    .header {
+        max-width: 992px;
+        max-height: 70px;
+        margin-top: 15px;
+        border-radius: 15px;
+        margin-left: 15px;
+        margin-right: 15px;
+        background-color: #3BDAD0;
+    }
+
+    .links {
+        padding-bottom: 15px;
+        border-radius: 15px;
+    }
+
+    .estructura {
+        max-width: 992px;
+        max-height: 70px;
+        margin-top: 15px;
+        border-radius: 15px;
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+
+    .foto img {
+        max-width: 170px;
+        margin-left: 25px;
+        border-radius: 15px;
+        width: auto;
+        text-align: left;
+       
+    }
+
+    .nombrecompleto {
+       font-family: lily script one;
+        text-align: center;
+        padding-top: 5px;
+        font-size: 20px;
+        border-radius: 15px;
+        height: 490px;
+        background-color:#3BDAD0;
+    }
+
+    .subtitulo {
+        max-width: 992px;
+        max-height: 20px;
+        text-align: left;
+        margin-left: 30px;
+        font-size: 22px;
+    }
+
+    .informacion {
+        max-width: 850px;
+    }
+
+    .estudios {
+        max-width: 700px;
+        text-align: left;
+        max-height: 230px;
+        margin-left: 30px;
+        font-size: 18px;
+    }
+
+
+    .links {
+        display: inline-flex;
+        align-items: center;
+        list-style: none;
+    }
+
+    .links a {
+       font-family: lily script one;
+        color: black;
+        text-decoration: none;
+        font-size: 1.1rem;
+        padding-top: 10px;
+        list-style: none;
+       text-decoration: none;
+        padding-right: 8vw;
+        padding-left: 9vw;
+        display: flex;
+    }
+
+    .links a:hover {
+        color: white;
+    }
+
+    .piedepagina {
+        text-align: center;
+        font-family: lily script one;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height:3 em;
+        margin:auto;
+    }
+}
+
+
+
+
+
+
 
 /*------------PANTALLAS CHICAS-----------*/
 @media screen and (max-width: 767px) and (min-width: 576px) {
@@ -259,6 +379,10 @@
         padding-right: 6vw;
         padding-left: 6vw;
         display: flex;
+    }
+
+    .links a:hover {
+        color: white;
     }
 
     .piedepagina {
@@ -352,6 +476,10 @@
         padding-right: 2vw;
         padding-left: 2vw;
         display: flex;
+    }
+
+    .links a:hover {
+        color: white;
     }
 
     .piedepagina {
