--- a/competencias.css
+++ b/competencias.css
@@ -14,6 +14,7 @@
     }
 
     .links {
+       justify-content: center;
         padding-bottom: 15px;
         border-radius: 15px;
     }
@@ -111,6 +112,7 @@
     }
 
     .links {
+        justify-content: center;
         padding-bottom: 15px;
         border-radius: 15px;
     }
@@ -209,6 +211,7 @@
     }
 
     .links {
+        justify-content: center;
         padding-bottom: 15px;
         border-radius: 15px;
     }
@@ -315,6 +318,7 @@
     }
 
     .links {
+        justify-content: center;
         padding-bottom: 15px;
         border-radius: 15px;
     }
@@ -410,6 +414,7 @@
     }
 
     .links {
+        justify-content: center;
         padding-bottom: 15px;
         max-height: 50px;
         border-radius: 15px;
@@ -460,7 +465,6 @@
     .links {
         display: inline-flex;
         align-items: center;
-        padding-left: 4vw;
         list-style: none;
     }
 
