--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@
     }
 
     .links {
+        justify-content: center;
         padding-bottom: 15px;
         border-radius: 15px;
     }
@@ -126,6 +127,7 @@
     }
 
     .links {
+        justify-content: center;
         padding-bottom: 15px;
         border-radius: 15px;
     }
@@ -239,6 +241,7 @@
     }
 
     .links {
+        justify-content: center;
         padding-bottom: 15px;
         border-radius: 15px;
     }
@@ -352,6 +355,7 @@
     }
 
     .links {
+        justify-content: center;
         padding-bottom: 15px;
         border-radius: 15px;
     }
@@ -522,9 +526,9 @@
     }
 
     .links {
+        justify-content: center;
         display: inline-flex;
         align-items: center;
-        padding-left: 4vw;
         list-style: none;
     }
 
