--- a/index.css
+++ b/index.css
@@ -451,7 +451,7 @@
 
 
 /*------------PANTALLAS TELEFONO VERTICAL-----------*/
-@media screen and (max-width: 479px) and (min-width: 360px) {
+@media screen and (max-width: 479px)  {
     body {
         padding: 0px;
         margin: 0px;
